--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,6 @@ main {
 
 .p-title {
     color: blueviolet;
-    text-shadow: 0px 0px 14px blueviolet;
 }
 
 img {
@@ -50,4 +49,48 @@ img {
     align-items: center;
     border-radius: 0px 8px 8px 0px;
     background-color: #AB5CDB;
+}
+
+.company-value {
+    color: white;
+    font-size: 24px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    margin-right: 72px;
+    margin-top: 71px;
+    margin-left: 72px;
+    margin-bottom: 25px;
+}
+
+.template-value {
+    color: white;
+    font-size: 24px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    margin-right: 72px;
+    margin-top: 71px;
+    margin-left: 72px;
+    margin-bottom: 25px;
+}
+
+.queries-value {
+    color: white;
+    font-size: 24px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    margin-right: 72px;
+    margin-top: 71px;
+    margin-left: 72px;
+    margin-bottom: 25px;
+}
+
+.card-value {
+    display: flex;
+}
+
+.value-name {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    color: grey;
 }
